// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backstage <Backstage /> renders correctly 1`] = `
<Fragment>
  <Backstage
    className="backstageOpen"
    isOpen={true}
  />
  <div
    onClick={[Function]}
    style={
      Object {
        "background": "#222222",
        "height": "100%",
        "left": "0px",
        "opacity": 0.6,
        "position": "absolute",
        "top": "0px",
        "width": "100%",
        "zIndex": 590,
      }
    }
  />
</Fragment>
`;

exports[`Backstage <Backstage /> with child items 1`] = `
<Fragment>
  <Backstage
    className="backstageOpen"
    isOpen={true}
    items={
      Array [
        <CommandLaunchBackstageItem
          commandHandler={
            Object {
              "execute": [Function],
              "messageId": "",
              "parameters": null,
            }
          }
          commandId="my-command-id"
          iconClass="icon-placeholder"
          labelKey="UiFramework:tests.label"
        />,
        <SeparatorBackstageItem />,
        <FrontstageLaunchBackstageItem
          frontstageId="Test1"
          iconClass="icon-placeholder"
          labelKey="UiFramework:tests.label"
        />,
        <SeparatorBackstageItem />,
        <TaskLaunchBackstageItem
          iconClass="icon-placeholder"
          labelKey="UiFramework:tests.label"
          taskId="Task1"
          workflowId="ExampleWorkflow"
        />,
      ]
    }
  />
  <div
    onClick={[Function]}
    style={
      Object {
        "background": "#222222",
        "height": "100%",
        "left": "0px",
        "opacity": 0.6,
        "position": "absolute",
        "top": "0px",
        "width": "100%",
        "zIndex": 590,
      }
    }
  />
</Fragment>
`;
